Dockerfile и docker-compose.yaml